# CPPHomeWork

./: CMakeLists.txt  Evlaute.cpp  Evlaute.h  Function.cpp  Function.h  Quote.cpp  Quote.h  Time.cpp  Time.h  main.cpp  overLoad.cpp  overLoad.h  printName.cpp  printName.h  sort.cpp  sort.h
